--- a/templates/user_table.html
+++ b/templates/user_table.html
@@ -59,7 +59,16 @@
 <body>
 
 <h1>User Information</h1>
-
+<div id="editForm">
+    <h2>Edit User</h2>
+    <form id="userEditForm" onsubmit="submitEditForm(event)">
+        <input type="text" id="editEmail" name="editEmail">
+        Password: <input type="text" id="editPassword" name="editPassword" class="form-control" required><br>
+        User ID: <input type="text" id="editUserIdInput" name="editUserIdInput" class="form-control" disabled><br>
+        <input type="submit" value="Save" class="btn btn-success">
+        <button type="button" onclick="cancelEdit()" class="btn btn-secondary">Cancel</button>
+    </form>
+</div>
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr>
@@ -70,20 +79,11 @@
         </tr>
     </thead>
     <tbody id="userTableBody">
-        <!-- Users will be dynamically added here using JavaScript -->
+     
     </tbody>
 </table>
 
-<div id="editForm">
-    <h2>Edit User</h2>
-    <form id="userEditForm" onsubmit="submitEditForm(event)">
-        <input type="hidden" id="editEmail" name="editEmail">
-        Password: <input type="text" id="editPassword" name="editPassword" class="form-control" required><br>
-        User ID: <input type="text" id="editUserIdInput" name="editUserIdInput" class="form-control" disabled><br>
-        <input type="submit" value="Save" class="btn btn-success">
-        <button type="button" onclick="cancelEdit()" class="btn btn-secondary">Cancel</button>
-    </form>
-</div>
+
 
 <script>
     document.addEventListener("DOMContentLoaded", function () {
@@ -126,7 +126,7 @@
                 <td>${user.password}</td>
                 <td>${user.user}</td>
                 <td>
-                    <a href="#" onclick="editUser('${user.email}')" class="btn btn-primary btn-sm">Edit</a>
+                    
                     <a href="#" onclick="deleteUser('${user.email}')" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             `;
@@ -143,7 +143,7 @@
                 document.getElementById('editEmail').value = data.email;
                 document.getElementById('editPassword').value = data.password;
                 document.getElementById('editUserIdInput').value = data.user;
-                document.getElementById('editForm').style.display = 'block';
+                document.getElementById('editForm').style.display ;
             })
             .catch(error => console.error('Error:', error));
     }
